k8s/applications/omv/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: omv
subsets:
  - addresses:
      - ip: 192.168.1.205
    ports:
      - name: http
        port: 80
