k8s/applications/omv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omv
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
