k8s/applications/omv/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: omv
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("omv.mchill.io")
      kind: Rule
      services:
        - name: omv
          port: 80
